@@ -16,6 +16,11 @@ dctrl-tools (2.14) UNRELEASED; urgency=low
     Closes: #506138 (Segfault when calling with wrong order of parameters)
     Reported by Marco Túlio Gontijo e Silva <marcot@holoscopio.com>.
 
+  [ Stefano Zacchiroli ]
+  * grep-dctrl: add new matching mode --whole-pkg/-w: it is an improved -e
+    matching exact package names, i.e., no sub-string matching on package
+    names. Closes: #383921
+
  -- Antti-Juhani Kaijanaho <ajk@debian.org>  Tue, 06 Jan 2009 20:20:17 +0200
 
 dctrl-tools (2.13.0) unstable; urgency=low
